# todou

./: .gitattributes  .gitignore  bench.html  cabal.project  default.nix  flake.nix  hie.yaml  justfile  shell.nix  todou.cabal  todou.eventlog.dir.1.html  todou.eventlog.dir.2.html  todou.eventlog.dir.3.html  todou.eventlog.dir.html
bench/: Main.hs
data/todou/: main.js  rev  summary.js  todo.js
js/: main.tsx  rev  summary.tsx  todo.tsx
src/Todou/: Main.hs  Option.hs  Server.hs  Store.hs
src/Todou/Domain/: Stat.hs  Summary.hs  Todo.hs
test/: Spec.hs
