cabal-version:      3.0
name:               todou
version:            1.0.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ailrk
maintainer:         jimmy123good@gmail.com
category:           Web
build-type:         Simple
extra-source-files:
    data/todou/*.js
    data/todou/*.css
    data/todou/*.svg
    data/todou/*.png
    data/todou/*.ico
    data/todou/manifest.json
    data/todou/rev


common extensions
    default-extensions:
      BlockArguments
      DataKinds
      DerivingStrategies
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      ImportQualifiedPost
      KindSignatures
      LambdaCase
      NoFieldSelectors
      OverloadedLabels
      OverloadedRecordDot
      OverloadedStrings
      QuasiQuotes
      RecordWildCards
      ScopedTypeVariables
      StandaloneDeriving
      StrictData
      TypeApplications
      TypeOperators
      TypeFamilies
      FlexibleInstances


common options
    ghc-options:
      -- force all warnings to be on and selectively disable some
      -Weverything
      -Wno-all-missed-specialisations
      -Wno-ambiguous-fields
      -Wno-implicit-prelude
      -Wno-missing-deriving-strategies
      -Wno-missing-export-lists
      -Wno-missing-import-lists
      -Wno-missing-kind-signatures
      -Wno-missing-local-signatures
      -Wno-missing-safe-haskell-mode
      -Wno-monomorphism-restriction
      -Wno-safe
      -Wno-unsafe
      -Wno-unticked-promoted-constructors
      -threaded


library
    import: extensions, options
    exposed-modules:
      Todou.Domain.Stat
      Todou.Domain.Todo
      Todou.Main
      Todou.Option
      Todou.Server
      Todou.Store
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.2.0
      , aeson
      , amazonka
      , amazonka-s3
      , bytestring
      , base64-bytestring
      , conduit
      , containers
      , directory
      , file-embed
      , filepath
      , http-types
      , lucid
      , network-uri
      , psqueues
      , scotty
      , string-interpolate
      , text
      , time
      , jwt
      , cryptonite
      , cryptohash-sha256
      , wai
      , wai-extra
      , warp
      , cookie
      , zlib

    hs-source-dirs:   src
    default-language: Haskell2010


executable todou
    import: extensions, options
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0
      , todou
    hs-source-dirs:   app
    default-language: Haskell2010


test-suite todou-test
    import: extensions, options
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.20.2.0
      , hspec
      , containers
      , QuickCheck
      , text
      , time
      , todou
      , zlib
      , base64-bytestring
      , bytestring
      , temporary
      , filepath
      , sqlite-simple
      , aeson
    default-language:    Haskell2010
